# clarirs

./: .gitignore  .gitmodules  Cargo.toml  README.md  pr-prompts.md  pyproject.toml
.github/: agents.md  copilot-instructions.md
.github/workflows/: ci.yml
crates/claripy/: Cargo.toml
crates/claripy/benchmarks/: perf_ast.py
crates/claripy/src/: annotation.rs  lib.rs  macros.rs  prelude.rs  py_err.rs  solver.rs  weakref.rs
crates/claripy/src/ast/: base.rs  bits.rs  bool.rs  bv.rs  fp.rs  mod.rs  py_factory.rs  shared_ops.rs  string.rs
crates/clarirs-core/: Cargo.toml
crates/clarirs-core/src/: error.rs  smtlib.rs
crates/clarirs-core/src/algorithms/: excavate_ite.rs  reconstruct.rs  simplify.rs
crates/clarirs-core/src/algorithms/simplify/: test_bool.rs  test_bv.rs  test_float.rs  test_string.rs
crates/clarirs-core/src/ast/: annotation.rs  node.rs  op.rs
crates/clarirs-core/src/solver/: composite.rs  concrete.rs  hybrid.rs  mod.rs
crates/clarirs-core/src/solver_mixins/: concrete_early_resolution.rs  model_cache.rs  replacement.rs  simplification.rs
crates/clarirs-core/src/util/: precomputed_hasher.rs
crates/clarirs-hybrid/: Cargo.toml
crates/clarirs-hybrid/src/: lib.rs  solver.rs
crates/clarirs-num/: Cargo.toml
crates/clarirs-num/src/: float.rs
crates/clarirs-py/: Cargo.toml
crates/clarirs-py/src/: solver.rs
crates/clarirs-py/tests/: test_eval_unconstrained.py  test_fp_ops.py  test_solver_split.py  test_vsa_simplify_solving.py
crates/clarirs-vsa/: Cargo.toml
crates/clarirs-vsa/src/: cardinality.rs  constraint_to_si.rs  denormalize.rs  lib.rs  normalize.rs  reduce.rs  solver.rs  strided_interval.rs
crates/clarirs-vsa/src/reduce/: bool.rs  bv.rs
crates/clarirs-vsa/src/strided_interval/: modular_arithmatic.rs
crates/clarirs-vsa/tests/: normalize_test.rs
crates/clarirs-z3-sys/: Cargo.toml  build.rs
crates/clarirs-z3-sys/examples/: basic.rs
crates/clarirs-z3-sys/src/: lib.rs
crates/clarirs-z3-sys/test-sys/: Cargo.toml
crates/clarirs-z3/src/: solver.rs
crates/clarirs_core/: Cargo.toml
crates/clarirs_core/benches/: performance.rs
crates/clarirs_core/src/: cache.rs  childvecext.rs  composite_solver.rs  context.rs  error.rs  lib.rs  prelude.rs  smtlib.rs  solver.rs
crates/clarirs_core/src/algorithms/: canonicalize.rs  collect_vars.rs  deannotate.rs  dfs.rs  excavate_ite.rs  find_variable.rs  iterator.rs  join.rs  mod.rs  post_order.rs  pre_order.rs  reconstruct.rs  replace.rs  replace_dict.rs  simplify.rs
crates/clarirs_core/src/algorithms/excavate_ite/: bitvec.rs  bool.rs  float.rs  string.rs
crates/clarirs_core/src/algorithms/excavate_ite/tests/: bitvec_test.rs  bool_test.rs
crates/clarirs_core/src/algorithms/iterator/: filtered.rs  leaf.rs  levelorder.rs  postorder.rs  preorder.rs  transform.rs
crates/clarirs_core/src/algorithms/simplify/: bool.rs  bv.rs  float.rs  string.rs  test_bool.rs  test_bv.rs
crates/clarirs_core/src/algorithms/tests/: mod.rs  test_bool.rs  test_bv.rs
crates/clarirs_core/src/ast/: annotation.rs  astcache.rs  astop.rs  bitvec.rs  bool.rs  factory.rs  factory_support.rs  float.rs  kind.rs  make_like.rs  mod.rs  node.rs  op.rs  string.rs  theory.rs
crates/clarirs_core/src/python/: annotation.rs  error.rs  mod.rs  prelude.rs  pyslicemethodsext.rs  vsa_hooks.rs
crates/clarirs_core/src/python/ast/: args.rs  base.rs  bits.rs  bool.rs  bv.rs  coerce.rs  convert.rs  fp.rs  mod.rs  opstring.rs  string.rs
crates/clarirs_core/src/solver/: composite.rs  concrete.rs  hybrid.rs  mod.rs  solver.rs  tests.rs
crates/clarirs_core/src/solver_mixins/: composite.rs  concrete_early_resolution.rs  mod.rs  model_cache.rs  replacement.rs  simplification.rs
crates/clarirs_cvc5/: Cargo.toml
crates/clarirs_cvc5/src/: astext.rs  lib.rs  solver.rs
crates/clarirs_cvc5/src/astext/: bool.rs  bv.rs  float.rs  string.rs
crates/clarirs_num/: Cargo.toml
crates/clarirs_num/src/: bitvec.rs  float.rs
crates/clarirs_num/src/bitvec/: arithmetic.rs  bitwise.rs  comparison.rs  conversion.rs  extension.rs  reference_tests.rs  test_arithmetic.rs  test_bitwise.rs  test_comparison.rs  test_conversion.rs  test_extension.rs  test_utility.rs  tests.rs
crates/clarirs_py/: Cargo.toml
crates/clarirs_py/benchmarks/: perf_ast.py
crates/clarirs_py/docs/: pyi-generation.md
crates/clarirs_py/src/: annotation.rs  dynsolver.rs  error.rs  lib.rs  macros.rs  prelude.rs  py_err.rs  solver.rs  vsa.rs
crates/clarirs_py/src/ast/: args.rs  base.rs  bits.rs  bool.rs  bv.rs  coerce.rs  fp.rs  mod.rs  opstring.rs  string.rs
crates/clarirs_py/tests/: test_annotations.py  test_batch_eval.py  test_bool_ops.py  test_bv_ops.py  test_fp_ops.py  test_get_bytes.py  test_replacement_solver.py  test_solver_cacheless.py  test_string_ops.py  test_unsat_core.py  test_vsa_bool_ops.py  test_vsa_bv_ops.py  test_vsa_simplify_solving.py
crates/clarirs_z3/: Cargo.toml
crates/clarirs_z3/src/: ast_helpers.rs  astext.rs  convert.rs  lib.rs  rc.rs  simplify.rs  solver.rs  z3.rs  z3_compat.rs  z3ext.rs
crates/clarirs_z3/src/astext/: bool.rs  bv.rs  float.rs  string.rs  test_bool.rs  test_bv.rs  test_float.rs  test_string.rs
crates/clarirs_z3/src/convert/: bool.rs  bv.rs  float.rs  string.rs
