[workspace]
members = [
    "crates/clarirs_num",
    "crates/clarirs_core",
]
resolver = "2"

[workspace.package]
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["clarirs", "smt", "z3", "solver"]
categories = ["science", "math", "security"]
repository = "https://github.com/twizmwazin/clarirs.git"

[workspace.lints.clippy]
all = "warn"
cargo = "deny"
