[workspace]
members = [
    "crates/clarirs-num",
    "crates/clarirs-core",
    "crates/clarirs-py",
    "crates/clarirs-z3",
    "crates/clarirs-vsa",
]
resolver = "2"

[workspace.package]
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["clarirs", "smt", "z3", "solver"]
categories = ["science", "math", "security"]
repository = "https://github.com/twizmwazin/clarirs.git"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"

[workspace.lints.clippy]
all = "warn"
cargo = "warn"
