[package]
name = "claripy"
version = "0.1.0"
edition = "2021"

[dependencies]
# pyo3 0.22.2 has an issue with raising exceptions on Python 3.12, so we use the
# latest version from the master branch until a new release is made.
# See https://github.com/PyO3/pyo3/pull/3306
pyo3 = { git = "https://github.com/PyO3/pyo3.git", features = ["extension-module", "py-clone", "num-bigint"] }
clarirs_core = { path = "../clarirs_core", features = ["runtime-checks"] }
thiserror = "1.0.63"
num-bigint = "0.4.6"
