[package]
name = "clarirs-hybrid"
version = "0.1.0"
edition = "2024"
description = "Hybrid solver for Clarirs combining approximate and exact backends"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
clarirs_core = { path = "../clarirs_core" }

[lints]
workspace = true
