[package]
name = "clarirs_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.86"
clarirs_num = { path = "../clarirs_num" }
num-bigint = { version = "0.4.6", features = ["serde"] }
petgraph = "0.6.5"
rand = { version = "0.8.5", features = [ "small_rng"] }
serde = { version = "1.0.209", features = ["derive", "rc"] }
smallvec = { version = "1.13.2", features = ["serde"] }
thiserror = "1.0.63"

[features]
default = ["runtime-checks"]
runtime-checks = []

[lints]
workspace = true
