[package]
name = "clarirs_num"
version = "0.1.0"
edition = "2021"
description = "Numeric types for clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
num-bigint = "0.4.6"
num-traits = "0.2"
serde = "1.0.209"
smallvec = "1.13.2"
thiserror = { workspace = true }

[lints]
workspace = true
