[package]
name = "clarirs_py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { version = "0.23.4", features = [
    "extension-module",
    "py-clone",
    "num-bigint",
] }
clarirs_core = { path = "../clarirs_core", features = ["runtime-checks"] }
clarirs_num = { path = "../clarirs_num" }
clarirs_z3 = { path = "../clarirs_z3" }
thiserror = { workspace = true }
num-bigint = "0.4.6"
log = "0.4.25"
dashmap = "6.1.0"

[lib]
name = "clarirs"

[lints]
workspace = true
