[package]
name = "clarirs_py"
version = "0.1.0"
edition = "2024"
description = "Python bindings for clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { version = "0.29.0", features = ["py-clone", "num-bigint"] }
clarirs_core = { path = "../clarirs_core", features = ["runtime-checks", "python"] }
clarirs-vsa = { path = "../clarirs-vsa" }
clarirs_z3 = { path = "../clarirs_z3" }
num-bigint = "0.4.6"

[lib]
name = "claripy"

[lints]
workspace = true
