[package]
name = "clarirs_z3"
version = "0.1.0"
edition = "2024"
description = "Z3 solver for clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
clarirs_core = { path = "../clarirs_core" }
clarirs-z3-sys = { path = "../clarirs-z3-sys" }
regex = "1.5" 

[lints]
workspace = true
