[package]
name = "clarirs_z3"
version = "0.1.0"
edition = "2024"
description = "Z3 solver for clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
clarirs_core = { path = "../clarirs_core" }
z3 = { version = "0.19", features = ["bundled"] }
z3-sys = "0.10"
regex = "1.12"
num-bigint = "0.4"
num-traits = "0.2"

[lints]
workspace = true
