[package]
name = "clarirs_z3"
version = "0.1.0"
edition = "2024"
description = "Z3 solver for clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[features]
default = ["static-link"]
# Build Z3 from source and statically link it (default).
static-link = ["clarirs-z3-sys/static-link"]
# Load Z3 at runtime from a shared library (e.g. the `z3-solver` wheel).
dynamic-link = ["clarirs-z3-sys/dynamic-link"]

[dependencies]
clarirs_core = { path = "../clarirs_core" }
clarirs-z3-sys = { path = "../clarirs-z3-sys", default-features = false }
regex = "1.12"

[lints]
workspace = true
